04-PS_HELLO/PS_HELLO.sdk/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
19:26:58 **** Incremental Build of configuration Debug for project HelloWorld ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/helloworld.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../HelloWorld_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
../src/helloworld.c: In function 'main':
../src/helloworld.c:62:5: error: too many arguments to function 'print'
     print("%d\r\n",123);
     ^~~~~
In file included from ../src/helloworld.c:50:0:
../../HelloWorld_bsp/ps7_cortexa9_0/include/xil_printf.h:40:6: note: declared here
 void print( const char8 *ptr);
      ^~~~~
../src/helloworld.c:63:5: error: too many arguments to function 'print'
     print("%ld\r\n",12345678);
     ^~~~~
In file included from ../src/helloworld.c:50:0:
../../HelloWorld_bsp/ps7_cortexa9_0/include/xil_printf.h:40:6: note: declared here
 void print( const char8 *ptr);
      ^~~~~
../src/helloworld.c:64:5: error: too many arguments to function 'print'
     print("%f\r\n",1.23);
     ^~~~~
In file included from ../src/helloworld.c:50:0:
../../HelloWorld_bsp/ps7_cortexa9_0/include/xil_printf.h:40:6: note: declared here
 void print( const char8 *ptr);
      ^~~~~
../src/helloworld.c:65:5: error: too many arguments to function 'print'
     print("%x\r\n",0xFF);
     ^~~~~
In file included from ../src/helloworld.c:50:0:
../../HelloWorld_bsp/ps7_cortexa9_0/include/xil_printf.h:40:6: note: declared here
 void print( const char8 *ptr);
      ^~~~~
make: *** [src/helloworld.o] ´íÎó 1
19:27:11 **** Auto Build of configuration Debug for project HelloWorld ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/helloworld.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../HelloWorld_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
../src/helloworld.c: In function 'main':
../src/helloworld.c:63:15: warning: format '%ld' expects argument of type 'long int', but argument 2 has type 'int' [-Wformat=]
     printf("%ld\r\n",12345678);
             ~~^
             %d
'Finished building: ../src/helloworld.c'
' '
'Building target: HelloWorld.elf'
'Invoking: ARM v7 gcc linker'
arm-none-eabi-gcc -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -Wl,-build-id=none -specs=Xilinx.spec -Wl,-T -Wl,../src/lscript.ld -L../../HelloWorld_bsp/ps7_cortexa9_0/lib -o "HelloWorld.elf"  ./src/helloworld.o ./src/platform.o   -Wl,--start-group,-lxil,-lgcc,-lc,--end-group
'Finished building target: HelloWorld.elf'
' '
'Invoking: ARM v7 Print Size'
arm-none-eabi-size HelloWorld.elf  |tee "HelloWorld.elf.size"
   text	   data	    bss	    dec	    hex	filename
  86740	   2580	  23328	 112648	  1b808	HelloWorld.elf
'Finished building: HelloWorld.elf.size'
' '
19:27:53 **** Auto Build of configuration Debug for project HelloWorld ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/helloworld.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../HelloWorld_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
'Finished building: ../src/helloworld.c'
' '
'Building target: HelloWorld.elf'
'Invoking: ARM v7 gcc linker'
arm-none-eabi-gcc -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -Wl,-build-id=none -specs=Xilinx.spec -Wl,-T -Wl,../src/lscript.ld -L../../HelloWorld_bsp/ps7_cortexa9_0/lib -o "HelloWorld.elf"  ./src/helloworld.o ./src/platform.o   -Wl,--start-group,-lxil,-lgcc,-lc,--end-group
'Finished building target: HelloWorld.elf'
' '
'Invoking: ARM v7 Print Size'
arm-none-eabi-size HelloWorld.elf  |tee "HelloWorld.elf.size"
   text	   data	    bss	    dec	    hex	filename
  86668	   2580	  23328	 112576	  1b7c0	HelloWorld.elf
'Finished building: HelloWorld.elf.size'
' '
19:30:06 **** Incremental Build of configuration Debug for project HelloWorld ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
make: Nothing to be done for `main-build'.
19:55:54 **** Auto Build of configuration Debug for project HelloWorld ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/helloworld.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../HelloWorld_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
'Finished building: ../src/helloworld.c'
' '
'Building target: HelloWorld.elf'
'Invoking: ARM v7 gcc linker'
arm-none-eabi-gcc -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -Wl,-build-id=none -specs=Xilinx.spec -Wl,-T -Wl,../src/lscript.ld -L../../HelloWorld_bsp/ps7_cortexa9_0/lib -o "HelloWorld.elf"  ./src/helloworld.o ./src/platform.o   -Wl,--start-group,-lxil,-lgcc,-lc,--end-group
'Finished building target: HelloWorld.elf'
' '
'Invoking: ARM v7 Print Size'
arm-none-eabi-size HelloWorld.elf  |tee "HelloWorld.elf.size"
   text	   data	    bss	    dec	    hex	filename
  86668	   2580	  23328	 112576	  1b7c0	HelloWorld.elf
'Finished building: HelloWorld.elf.size'
' '
